# wplace-tools

./: .gitignore  Cargo.toml  LICENSE  README.md  release  tile-to-coord  tile-to-coord.js
output/: full-color-chunks.txt
server-scripts/: README.md  auto-diff  auto-diff-inf  squashfs-index  tosqfs  upload
src/: archive.rs  archive_tool.rs  checksum.rs  diff.rs  diff2.rs  diff3.rs  diff_file.rs  indexed_png.rs  lib.rs  tar.rs  zip.rs
src/playground/: alter.rs  archive_checksum.rs  base63.rs  decode-base63  diff_size_of_chunks_changed.rs  fetch-data  find_full_color_chunks.rs  tar.rs  zip.rs
