[package]
name = "wplace-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
flate2 = "1.1.2"
once_cell = "1.21.3"
rayon = "1.11.0"
walkdir = "2.5.0"
indicatif = "0.18.0"
pathdiff = "0.2.3"
png = "0.18.0"
bytesize = "2.1.0"
env_logger = "0.11.8"
log = "0.4.28"
byteorder = "1.5.0"
yeet-ops = "1.0.0"
chrono = "0.4.42"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
blake3 = "1.8.2"

[[bin]]
name = "archive-tool"
path = "src/archive_tool.rs"

[[bin]]
name = "find-full-color-chunks"
path = "src/playground/find_full_color_chunks.rs"

[[bin]]
name = "diff-size-of-chunks-changed"
path = "src/playground/diff_size_of_chunks_changed.rs"

[[bin]]
name = "base63"
path = "src/playground/base63.rs"
