[package]
name = "wplace-tools"
version = "1.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
flate2 = "1.1.2"
once_cell = "1.21.3"
rayon = "1.11.0"
walkdir = "2.5.0"
indicatif = "0.18.0"
pathdiff = "0.2.3"
png = "0.18.0"
env_logger = "0.11.8"
log = "0.4.28"
byteorder = "1.5.0"
yeet-ops = "1.0.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"
rawzip = "0.4.1"
lazy-regex = "3.4.1"
tempfile = "3.23.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.44"
crc-fast = "1.5.0"
threadpool = "1.8.1"
num_cpus = "1.17.0"
squashfs_reader = { version = "0.1.0", default-features = false, features = ["only_rust"] }